<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LawlUi</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scouter_fragment">Enter summoner names to scout.</string>
    <string name="profile_fragment">Welcome to the profile fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="grid_element_name">champ_name</string>
    <string name="search">Search</string>
    <string name="skill_passive">Passive</string>
    <string name="skill1">Skill 1</string>
    <string name="skill2">Skill 2</string>
    <string name="skill3">Skill 3</string>
    <string name="skill4">Skill 4</string>
    <string name="skill_description">Skill Description</string>
    <string name="tips_fragment">Tips and Tricks</string>
    <string name="lore_framgment">Lore</string>
    <string name="name">Summoner Name</string>
    <string name="ranked_wins">Ranked Wins</string>
    <string name="normal_wins">Normal Wins</string>
    <string name="ranked_losses">Ranked Losses</string>
    <string name="normal_losses">Normal Losses</string>
    <string name="profile_search_fragment">Welcome to the Profile Search Fragment</string>
    <string name="masteries">Masteries</string>
    <string name="current_rank">Current Rank</string>


</resources>
