<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lawl.ui.ProfileFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_fragment"
                android:paddingBottom="20dp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/ranked_wins"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ranked_wins"/>

            <TextView
                android:id="@+id/normal_wins"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/normal_wins"/>

            <TextView
                android:id="@+id/ranked_losses"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ranked_losses"/>

            <TextView
                android:id="@+id/normal_losses"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/normal_losses"/>



        </LinearLayout>
    </ScrollView>
</FrameLayout>
