<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lawl.ui.DetailedChampFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/champ_image"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/grid_element_name"
                android:src="@drawable/aatrox_splash_0" />

            <TextView
                android:id="@+id/champ_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/grid_element_name"/>

            <TextView
                android:id="@+id/skill_passive"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/skill_passive"/>

            <TextView
                android:id="@+id/skill_passive_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/skill_description"/>


            <TextView
                android:id="@+id/skill1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/skill1"/>

            <TextView
                android:id="@+id/skill1_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/skill_description"/>

            <TextView
                android:id="@+id/skill2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/skill2"/>

            <TextView
                android:id="@+id/skill2_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/skill_description"/>

            <TextView
                android:id="@+id/skill3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/skill3"/>

            <TextView
                android:id="@+id/skill3_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/skill_description"/>

            <TextView
                android:id="@+id/skill4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/skill4"/>

            <TextView
                android:id="@+id/skill4_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/skill_description"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>